# favicon-rover

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
src/: cli.rs  cli_args.rs  fallback.rs  favicon.rs  favicon_image.rs  get_favicon.rs  image_writer.rs  main.rs  server.rs
src/favicon_image/: mod.rs  svg.rs
src/favicon_image/fetch/: mod.rs  scrape.rs
src/server/: fallback.rs  favicon_response.rs  mod.rs
