[package]
name = "favicon-rover"
version = "0.1.0"
edition = "2021"
description = "A web service and CLI tool to fetch the favicon of any website"
keywords = ["favicon", "scraper", "icon"]
repository = "https://github.com/stevent-team/favicon-rover"
license = "MIT"
authors = ["Benji Grant", "Ewan Breakey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = ["derive"] }
image = "0.24.6"
reqwest = "0.11.18"
resvg = "0.35.0"
thiserror = "1.0.43"
tl = "0.7.7"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
