[package]
name = "favicon-rover"
version = "0.1.0"
edition = "2021"
description = "A web service and CLI tool to fetch the favicon of any website"
keywords = ["favicon", "scraper", "icon"]
repository = "https://github.com/stevent-team/favicon-rover"
license = "MIT"
authors = ["Benji Grant", "Ewan Breakey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = ["dep:axum", "dep:tower-http", "dep:tower", "dep:tracing-subscriber", "dep:tracing"]

[dependencies]
axum = { version = "0.6.19", optional = true }
tower-http = { version = "0.4.3", features = ["trace", "cors"], optional = true }
tower = { version = "0.4.13", optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }

clap = { version = "4.3.15", features = ["derive"] }
image = "0.24.6"
reqwest = { version = "0.11.18", features = ["stream"] }
resvg = "0.35.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.43"
tl = "0.7.7"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
