[package]
name = "favicon-rover"
version = "0.1.1"
edition = "2021"
description = "A web service and CLI tool to fetch the favicon of any website"
keywords = ["favicon", "scraper", "icon"]
repository = "https://github.com/stevent-team/favicon-rover"
license = "MIT"
authors = ["Benji Grant", "Ewan Breakey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = ["dep:axum", "dep:tower-http", "dep:tower", "dep:tracing-subscriber", "dep:tracing", "dep:accept-header", "dep:mime", "dep:regex"]

[dependencies]
axum = { version = "0.6.19", optional = true }
tower-http = { version = "0.4.3", features = ["trace", "cors"], optional = true }
tower = { version = "0.4.13", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
accept-header = { version = "0.2.3", optional = true}
mime = { version = "0.3.17", optional = true }
regex = { version = "1.10.2", optional = true }

clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["stream"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
image = "0.24.7"
resvg = "0.37.0"
thiserror = "1.0.51"
tl = "0.7.7"
url = "2.5.0"
webp = "0.2.6"
lazy_static = "1.4.0"
